feat: new route, bug fix
